<resources>
    <string name="clear">C</string>
    <string name="sign_change">+/-</string>
    <string name="delete">DEL</string>
    <string name="divide">/</string>
    <string name="dot">.</string>
    <string name="equal">=</string>
    <string name="multiply">*</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="square_root">√</string>
    <string name="app_name">calculator</string>
</resources>
